--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url('four.jpg');
     font-family: Arial, sans-serif;
     background-repeat: no-repeat;
     background-position: top center;
