--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     background-color: #1e1e1e;
     color: #fff;
-    background-image: url('akali2.jpg');
+    background-image: url('garagas.jpg');
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
